[project]
name = "KeyFlow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "numpy>=2.4.4",
    "pyinstaller>=6.20.0",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "pywebview>=6.2.1",
    "sentence-transformers>=5.4.1",
]
